force-app/main/default/objects/NotaAcademica__c/NotaAcademica__c.object-meta.xml
<CustomObject>
    <label>Nota acadêmica</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas acadêmicas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>