force-app/main/default/objects/NotaAcademica__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aluno</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Aluno</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notas acadêmicas</relationshipLabel>
    <relationshipName>NotasAcademicas</relationshipName>
    <type>Lookup</type>
</CustomField>