force-app/main/default/objects/NotaAcademica__c/fields/Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Aprovado__c</fullName>
    <label>Aprovado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>