force-app/main/default/objects/NotaAcademica__c/fields/ApuracaoMedia4Notas__c.field-meta.xml
<CustomField>
    <fullName>ApuracaoMedia4Notas__c</fullName>
    <formula>IF(AND( 
 Nota1__c &gt;0, 
 Nota2__c &gt;0, 
 Nota3__c &gt;0, 
 Nota4__c &gt;0),&quot;Elegível&quot;,&quot;Não Elegivel&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apuração média (4 notas)</label>
    <type>Text</type>
</CustomField>