force-app/main/default/objects/NotaAcademica__c/fields/Conceito__c.field-meta.xml
<CustomField>
    <fullName>Conceito__c</fullName>
    <formula>IF(AND(Nota1__c &gt;0, Nota2__c &gt;0, Nota3__c &gt;0, Nota4__c &gt;0),

IF((MediaAnual4NotasAno__c/ MagnitudeNota__c)*100 &lt; 40 , &quot;D&quot;,
IF( (MediaAnual4NotasAno__c/ MagnitudeNota__c)*100 &gt;=40 &amp;&amp; (MediaAnual4NotasAno__c/ MagnitudeNota__c)*100 &lt;60 , &quot;C&quot;,
IF((MediaAnual4NotasAno__c/ MagnitudeNota__c)*100 &gt;=60 &amp;&amp; (MediaAnual4NotasAno__c/ MagnitudeNota__c)*100 &lt;80, &quot;B&quot;,&quot;A&quot;))),&quot;&quot;)</formula>
    <label>Conceito</label>
    <type>Text</type>
</CustomField>