force-app/main/default/objects/NotaAcademica__c/fields/Disciplina__c.field-meta.xml
<CustomField>
    <fullName>Disciplina__c</fullName>
    <label>Disciplina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Língua Portuguesa</fullName>
            </value>
            <value>
                <fullName>Matemática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>