force-app/main/default/objects/NotaAcademica__c/fields/MagnitudeNota__c.field-meta.xml
<CustomField>
    <fullName>MagnitudeNota__c</fullName>
    <label>Magnitude da nota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>