force-app/main/default/objects/NotaAcademica__c/fields/MediaAnual4NotasAno__c.field-meta.xml
<CustomField>
    <fullName>MediaAnual4NotasAno__c</fullName>
    <formula>IF( ApuracaoMedia4Notas__c = &quot;Elegível&quot;,

( Nota1__c + Nota2__c + Nota3__c + Nota4__c )/4,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média anual (4 notas/ano)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>