force-app/main/default/objects/NotaAcademica__c/fields/Nota1__c.field-meta.xml
<CustomField>
    <fullName>Nota1__c</fullName>
    <label>Nota 1</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>