force-app/main/default/objects/NotaAcademica__c/fields/Nota2__c.field-meta.xml
<CustomField>
    <fullName>Nota2__c</fullName>
    <label>Nota 2</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>