force-app/main/default/objects/NotaAcademica__c/fields/Nota3__c.field-meta.xml
<CustomField>
    <fullName>Nota3__c</fullName>
    <label>Nota 3</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>